check siteCrowler